# crawler-Brachsam

./: .gitignore  CMakeLists.txt  config.txt  et --hard HEAD@{1}  h origin main
browser/: browserAdapter.js  mockAdapter.js  package-lock.json  package.json
docs/build_logs/: day_1_session_1_build_log.md  day_1_session_2_build_log.md  day_1_session_3_build_log.md  day_2_session_1_build_log.md  day_2_session_2_build_log.md  day_2_session_3_build_log.md  day_2_session_4_build_log.md  day_3_session_1_build_log.md  day_3_session_2_build_log.md  day_3_session_3_build_log.md  day_3_session_4_build_log.md  day_4_session_1_build_log.md  day_4_session_2_build_log.md  day_4_session_3_build_log.md  day_4_session_4_build_log.md  day_5_session_1_build_log.md  day_5_session_2_build_log.md  day_5_session_3_build_log.md  day_5_session_4_build_log.md  day_6_session_1_build_log.md  day_6_session_2_build_log.md  day_6_session_3_build_log.md  day_7_session_1_build_log.md
docs/design_journal/: design_journal_day_1.md  design_journal_day_2.md  design_journal_day_3.md  design_journal_day_4.md  design_journal_day_5.md
docs/design_proposal/: 01_frontier.md  02_seenstore.md  03_pagefetcher.md  04_htmlparser.md  05_urlnormalizer.md  06_urlvalidator.md  07_pagestorage.md  08_config_and_logger.md  crawler_design_proposal.md
include/: URLDepth.h  URLNormalizer.h  URLValidator.h  common.h  configmanager.h  crawlScheduler.h  crawler.h  frontier.h  htmlParser.h  kmp.h  logger.h  pagefetcher.h  pagestorage.h  robotsHandler.h  seenstore.h
include/Common/: Page.h  URLDepth.h
include/Indexer/: DocumentReader.h  IndexStorage.h  Indexer.h  InvertedIndexBuilder.h  Normalizer.h  StopWordFilter.h  TermFrequencyCounter.h  TextExtractor.h  Tokenizer.h
src/: URLNormalizer.cpp  URLValidator.cpp  configmanager.cpp  crawlSchedular.cpp  crawler.cpp  frontier.cpp  htmlParser.cpp  kmp.cpp  logger.cpp  main.cpp  pagefetcher.cpp  pagestorage.cpp  robotsHandler.cpp  seenstore.cpp
src/Indexer/: DocumentReader.cpp  IndexStorage.cpp  Indexer.cpp  InvertedIndexBuilder.cpp  Normalizer.cpp  StopWordFilter.cpp  TermFrequencyCounter.cpp  TextExtractor.cpp  Tokenizer.cpp  indexer_main.cpp
tests/: FrontierTests.cpp  HTMLParserTests.cpp  IndexerTests.cpp  PageStorageTests.cpp  SeenStoreTests.cpp  URLNormalizerTests.cpp  URLValidatorTests.cpp
